--- a/aboutme.html
+++ b/aboutme.html
@@ -9,12 +9,12 @@
     <a href="aboutme.html">aboutme</a>
     <a href="portfolio.html">Portfolio</a>
     <h1>All about me</h1>
-    <img src="images/20160416_124634.jpg" height="250">
+    <img src="images/20160416_124634.jpg" height="250" rotate="90">
      <img src="images/Julia Haynes Red Kimono.jpg" height="250">
      <img src="images/Julia on boat 3.jpg" height="250">
       <h1>I'm 2.2% Korean</h1>
-      <img src="images/20161031_181947.jpg" height="250">
-          <img src="images/20170915_195102.jpg" height="250">
+      <img src="images/20161031_181947.jpg" height="250" rotate="90">
+          <img src="images/20170915_195102.jpg" height="250" rotate="90">
     <br>
     <a target="_blank" href="https://scratch.mit.edu">
       <img src="images/scratchlogo.png" height="100">
