--- a/portfolio.html
+++ b/portfolio.html
@@ -10,8 +10,10 @@
     <a href="aboutme.html">aboutme</a>
     <h1>This is my Portfolio Page!</h1>
     <img src="images/portfolio.jpg" height="250">
-    <br>
-    <a target="_blank" href="https://scratch.mit.edu">
+    <h1>This is my scratch project!</h1>
+    <img src="images/snippet.PNG" height="350">
+  <br>
+    <a target="_blank" href="https://scratch.mit.edu/projects/200050492/#player">
       <img src="images/scratchlogo.png" height="100">
     </a>
 	  </body>
