--- a/portfolio.html
+++ b/portfolio.html
@@ -15,10 +15,15 @@
       <img src="images/irresponsibledad.PNG" height="350">
       </a>
       <br>
-    <hl>This is my app. The game is Tic Tac Toe. It is a two player game, won by getting either 3 X's or 3 O's in a row. The app will say when a player has won.</hl>
-  
-  <br><a target="_blank" href="images/TicTacToee.apk" height="350">
+    <hl>This is my app. The game is Tic Tac Toe. It is a two player game, won by getting either 3 X's or 3 O's in a row. The app will say when a player has wondhjdhfdh.</hl>
+  <br>
+  <a target="_blank" href="images/TicTacToee.apk" height="350">
    <img src="images/snippet.PNG" height="350">
     </a>
+    <h1>Dating Jason</h1>
+    <a target="_blank" height="350" href="images/DATING_JASON.py">
+          <img src="images/DATING_JASON.PNG" height="350">
+    </a>
+    <img src="images/PythonProjectPseudoCode.PNG" height="350">
 	  </body>
 	</html>
