--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,7 @@
       <img src="images/irresponsibledad.PNG" height="350">
       </a>
       <br>
+     <h1> Mit App Inventor Tic Tac Toe</h1>
     <hl>This is my app. The game is Tic Tac Toe. It is a two player game, won by getting either 3 X's or 3 O's in a row. The app will say when a player has wondhjdhfdh.</hl>
   <br>
   <a target="_blank" href="images/TicTacToee.apk" height="350">
@@ -22,8 +23,10 @@
     </a>
     <h1>Dating Jason</h1>
     <a target="_blank" height="350" href="images/DATING_JASON_py.py">
-          <img src="images/DATING_JASON.PNG" height="350">
+          <img src="images/DATING_JASON.PNG" height="250">
     </a>
-    <img src="images/PythonProjectPseudoCode.PNG" height="350">
+    <h1>Python Flow Chart</h1>
+    <img src="images/PythonProjectPseudoCode(2).PNG" height="750">
 	  </body>
 	</html>
+
