--- a/portfolio.html
+++ b/portfolio.html
@@ -16,13 +16,14 @@
       </a>
       <br>
      <h1> Mit App Inventor Tic Tac Toe</h1>
-    <hl>This is my app. The game is Tic Tac Toe. It is a two player game, won by getting either 3 X's or 3 O's in a row. The app will say when a player has wondhjdhfdh.</hl>
+    <hl>This is my app. The game is Tic Tac Toe. It is a two player game, won by getting either 3 X's or 3 O's in a row. The app will say when a player has won.</hl>
   <br>
   <a target="_blank" href="images/TicTacToee.apk" height="350">
    <img src="images/snippet.PNG" height="350">
     </a>
     <h1>Dating Jason</h1>
        <font size="20" color="red">Based on answers you give for Jason, Jason either ends up alone, or with one of two girls. Try to make Jason end up in a happy relationship!</font>
+		  <br>
     <a target="_blank" height="350" href="images/DATING_JASON_py.py">
           <img src="images/DATING_JASON.PNG" height="250">
     </a>
