--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
      <font size="15" color="blue">Try to guess the song lyric by filling in the blank!</font>
      <BR>
     <img src="images/PythonProjectPseudoCode(2).PNG" height="750">
-    <a target="_blank" height="350" href="images/LYRICGAME.py">
+    <a target="_blank" href="images/LYRICGAME.py"> height="350"
     <img src="images/LYRICPICTURE.PNG" height="500">
    </a>
     
