--- a/portfolio.html
+++ b/portfolio.html
@@ -30,8 +30,8 @@
      <font size="15" color="blue">Try to guess the song lyric by filling in the blank!</font>
      <BR>
     <img src="images/PythonProjectPseudoCode(2).PNG" height="750">
+    <img src="images/lyricspic.png" height="500">
     <a target="_blank" href="images/LYRICGAME.py"> height="350"
-    <img src="images/LYRICPICTURE.PNG" height="500">
    </a>
     
 	  </body>
