--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
      <font size="15" color="blue">Try to guess the song lyric by filling in the blank!</font>
      <BR>
     <img src="images/PythonProjectPseudoCode(2).PNG" height="750">
-    <img src="images/lyricspic.png" height="500">
+    <img src="images/lyricspic.PNG" height="500">
     <a target="_blank" href="images/LYRICGAME.py"> height="350"
    </a>
     
