--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,14 @@
     <img src="images/lyricspic.PNG" height="500">
     <a target="_blank" href="images/LYRICGAME.py"> height="350"
    </a>
+ <h1> Python picture edit</h1>
+ <h1> We edited the colors of the picture to change what the picture looks like using python code</h1>
+ <img src="images/20180506_211338.jpg" height="350">
+ <img src="images/20180506_211522.jpg" height="350">
+ <img src="images/20180506_211240.jpg" height="350">
+	  </body>
+	</html>
+
     
 	  </body>
 	</html>
