--- a/portfolio.html
+++ b/portfolio.html
@@ -38,9 +38,13 @@
  <img src="images/20180506_211338.jpg" height="350">
  <img src="images/20180506_211522.jpg" height="350">
  <img src="images/20180506_211240.jpg" height="350">
+	     <br>
+<h1> Python Graph<h1>
+<h1> We made a graph on python that displays statistical information using python code we learned in this class</h1>
+<img src="images/pygraphcode.jpg" height="350">
+<img src="images/pygraph.jpg" height="350">	
 	  </body>
+<h1> 		  
 	</html>
 
     
-	  </body>
-	</html>
