--- a/portfolio.html
+++ b/portfolio.html
@@ -46,8 +46,8 @@
 	  </body>
 <h1> nETLOGO<h1>
 <h1> 	This is the new simulation that I remixed in Netlogo and it is about the Basic Evolution of people. My new question is, "If the reaction time was slowed, what is the new copperation and defection rate between people in society?" I changed how fast it spreads and what the initial amount is through changing the code. Also, I changed the colors of the simulation to add more perspective.<h1>
-<img src="images/NETLOGOOLD.jpg" height="350">
-<img src="images/NETLOGONEW.jpg" height="350">	
+<img src="images/OLDNETLOGO.PNG" height="350">
+<img src="images/NEWNETLOGO.PNG" height="350">	
 	</html>
 
     
